# src/server/controllers/ListingController.ts
@@ -1,7 +1,28 @@
 import { Listing } from "@prisma/client";
 import prisma from "../../db/prisma";
+import { NotFoundError } from "../../types/errors";
+import { ListingWithAccount } from "../../types/models";
 
 export class ListingController {
+  async getListingById(listingId: string): Promise<ListingWithAccount> {
+    // include account in the Listing type
+    try {
+      const listing = await prisma.listing.findUnique({
+        where: { id: listingId },
+        // include account
+        include: {
+          account: true,
+        },
+      });
+      if (!listing) {
+        throw new NotFoundError(`Listing with id ${listingId} not found`);
+      }
+      return listing;
+    } catch (err) {
+      throw err;
+    }
+  }
+
   async getListingsByBuyer(accountId: string): Promise<Listing[]> {
     try {
       const listings = await prisma.listing.findMany({
